--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_matrix2.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_matrix2.xml
@@ -7,6 +7,58 @@
     android:background="@color/ap_white"
     tools:context="com.androidplot.demos.matrix2">
 
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="PivoteoParcial"
+        android:text="PivoteoParcial"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.17" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="Crout"
+        android:text="CROUT"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.058"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.17" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="Doolittle"
+        android:text="Doolittle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.89"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.029" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="Cholesky"
+        android:text="CHOLESKY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.058"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.029" />
+
     <TextView
         android:id="@+id/matrixbS"
         android:layout_width="24dp"
@@ -31,14 +83,14 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="Gauus"
-        android:text="CALCULAR"
+        android:onClick="GaussSimple"
+        android:text="GaussSimple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.455"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.202" />
+        app:layout_constraintVertical_bias="0.029" />
 
     <TextView
         android:id="@+id/matrixX"
@@ -55,15 +107,15 @@
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.593"
+        app:layout_constraintHorizontal_bias="0.561"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.492" />
 
     <TableLayout
         android:id="@+id/VectorB"
-        android:layout_width="44dp"
-        android:layout_height="141dp"
+        android:layout_width="35dp"
+        android:layout_height="91dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -71,41 +123,10 @@
         android:background="#8DD2C6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.885"
+        app:layout_constraintHorizontal_bias="0.894"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.756">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <EditText
-                android:text="1"
-                android:textColor="@color/ap_black"
-                android:textSize="25dp" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <EditText
-                android:text="1"
-                android:textColor="@color/ap_black"
-                android:textSize="25dp" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <EditText
-                android:text="1"
-                android:textColor="@color/ap_black"
-                android:textSize="25dp" />
-        </TableRow>
-    </TableLayout>
+        app:layout_constraintVertical_bias="0.725"></TableLayout>
 
     <TextView
         android:id="@+id/matrixAEqual"
@@ -149,8 +170,8 @@
 
     <TableLayout
         android:id="@+id/VectorX"
-        android:layout_width="44dp"
-        android:layout_height="141dp"
+        android:layout_width="35dp"
+        android:layout_height="91dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -158,51 +179,13 @@
         android:background="@color/ap_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.598"
+        app:layout_constraintHorizontal_bias="0.579"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.756">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/Sol_fila1_columna1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_column="1"
-                android:background="@color/ap_transparent"
-                android:text=""
-                android:textColor="@color/ap_black" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                android:id="@+id/Sol_fila2_columna1"
-                android:layout_column="1"
-                android:background="@color/ap_transparent"
-                android:text=""
-                android:textColor="@color/ap_black"/>
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                android:id="@+id/Sol_fila3_columna1"
-                android:layout_column="1"
-                android:background="@color/ap_transparent"
-                android:text=""
-                android:textColor="@color/ap_black"/>
-        </TableRow>
-
-    </TableLayout>
+        app:layout_constraintVertical_bias="0.725"></TableLayout>
 
     <TableLayout
-        android:id="@+id/tableLayout3"
+        android:id="@+id/Container"
         android:layout_width="@dimen/A_Size_width"
         android:layout_height="@dimen/A_Size_height"
         android:layout_marginBottom="8dp"
@@ -225,6 +208,7 @@
                 android:layout_height="@dimen/Button_Size"
                 android:layout_column="1"
                 android:background="@color/ap_transparent"
+                android:onClick="addRow"
                 android:text="+"
                 android:textAlignment="4"
                 android:textColor="@color/ap_black" />
@@ -241,104 +225,6 @@
                 android:layout_column="2"
                 android:background="#8DD2C6">
 
-                <TableRow>
-
-                    <EditText
-                        android:id="@+id/Fila1_Columna1"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_column="1"
-                        android:inputType="numberDecimal"
-                        android:text="1"
-                        android:textColor="@color/ap_black"
-                        android:textSize="10dp" />
-
-                    <EditText
-                        android:id="@+id/Fila1_Columna2"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_column="2"
-                        android:inputType="numberDecimal"
-                        android:text="0"
-                        android:textColor="@color/ap_black"
-                        android:textSize="10dp" />
-
-                    <EditText
-                        android:id="@+id/Fila1_Columna3"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_column="3"
-                        android:inputType="numberDecimal"
-                        android:text="0"
-                        android:textColor="@color/ap_black"
-                        android:textSize="10dp" />
-                </TableRow>
-
-                <TableRow>
-
-                    <EditText
-                        android:id="@+id/Fila2_Columna1"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_column="1"
-                        android:inputType="numberDecimal"
-                        android:text="0"
-                        android:textColor="@color/ap_black"
-                        android:textSize="10dp" />
-
-                    <EditText
-                        android:id="@+id/Fila2_Columna2"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_column="2"
-                        android:inputType="numberDecimal"
-                        android:text="1"
-                        android:textColor="@color/ap_black"
-                        android:textSize="10dp" />
-
-                    <EditText
-                        android:id="@+id/Fila2_Columna3"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_column="3"
-                        android:inputType="numberDecimal"
-                        android:text="0"
-                        android:textColor="@color/ap_black"
-                        android:textSize="10dp" />
-                </TableRow>
-
-                <TableRow>
-
-                    <EditText
-                        android:id="@+id/Fila3_Columna1"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_column="1"
-                        android:inputType="numberDecimal"
-                        android:text="0"
-                        android:textColor="@color/ap_black"
-                        android:textSize="10dp" />
-
-                    <EditText
-                        android:id="@+id/Fila3_Columna2"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_column="2"
-                        android:inputType="numberDecimal"
-                        android:text="0"
-                        android:textColor="@color/ap_black"
-                        android:textSize="10dp" />
-
-                    <EditText
-                        android:id="@+id/Fila3_Columna3"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_column="3"
-                        android:inputType="numberDecimal"
-                        android:text="1"
-                        android:textColor="@color/ap_black"
-                        android:textSize="10dp" />
-                </TableRow>
 
             </TableLayout>
 
@@ -360,6 +246,7 @@
                 android:layout_height="@dimen/Button_Size"
                 android:layout_column="3"
                 android:background="@color/ap_transparent"
+                android:onClick="quitRow"
                 android:text="x"
                 android:textAlignment="4"
                 android:textColor="@color/ap_black" />
